Menambahkan endpoint get profile
