# docs/swagger.yaml
@@ -20,6 +20,15 @@ definitions:
       refresh_token:
         type: string
     type: object
+  dto.AccountProfileResp:
+    properties:
+      age:
+        type: integer
+      fullname:
+        type: string
+      gender:
+        type: string
+    type: object
   dto.ErrorResponse:
     properties:
       errors: {}
@@ -39,6 +48,16 @@ definitions:
         example: true
         type: boolean
     type: object
+  dto.SuccessResponse-dto_AccountProfileResp:
+    properties:
+      data:
+        $ref: '#/definitions/dto.AccountProfileResp'
+      message:
+        type: string
+      success:
+        example: true
+        type: boolean
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
@@ -47,14 +66,41 @@ info:
   contact:
     email: mark.p.e.muhammad@gmail.com
     name: Mark Muhammad
-    url: https://github.com/mark-muhammad
   description: This is a boilerplate project, please update accordingly.
   license:
     name: MIT
-    url: https://opensource.org/license/MIT
   title: Base API Service
   version: "1.0"
 paths:
+  /account:
+    get:
+      description: Get profile of logged-in account.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.SuccessResponse-dto_AccountProfileResp'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get account's profile
   /account/login:
     post:
       consumes:
